added styling and navigation

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 #root {
   max-width: 1280px;
-  display: flex;
+  display: block;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #373030;
+  
   
   
 
@@ -13,11 +15,168 @@
 
 .header{
   font-weight: 100;
-  
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 10.1);
 }
 
 
 
 
 
+
+
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color-scheme: light dark;
+  color: rgba(92, 216, 102, 0.87);
+  background-color: #242424;
+  background-image: url("./assets//food-background.jpg");
+
+ 
+  
+}
+
+a {
+  font-weight: 500;
+  color: #76d37b;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #74757ec7;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 980px;
+  min-height: 100vh;
+  max-width: 1280px;
+  margin: 0 auto;
+  
+  
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+.header{
+border-style:solid;
+}
+/**  styling for oakland-restaurants**/
+.main{
+  width: 1280px;
+  height: 980px;
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #1a1a1a;
+
+  
+}
+
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  
+}
+button:hover {
+  border-color: #1ad639;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
+
+/** restaurant randomizer*//
+
+.restaurant-container{
+  width:400px;
+  height: 210px;
+  margin-top: 30px;
+  font-weight: 100;
+  border-radius:100px;
+  border: 10px solid rgba(255, 255, 255, 0.5);
+  font-weight: 300;
+  font-size: large;
+
+}
+
+.footer,ul{
+
+ padding: 10px;
+ list-style-type:none;
+ justify-content: space-between;
+}
+
+
+/** comment section  */
+
+.main-container{
+display: flex;
+flex-direction: column;
+justify-content: center;
+margin-top: 100px;
+
+}
+
+.comment-flexbox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.comment-text {
+  margin: 12px 0;
+  font-size: 1.15rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.input-box {
+  height: 75px;
+  width: 465px;
+  background-color: #373030;
+
+}
+
+.comment-button {
+  height: 40px;
+  width: 110px;
+  background-color: #2d9279;
+  color: white;
+  font-size: 1.05rem;
+  margin-top: 10px;
+  border-radius: 5px;
+  border-style: none;
+  cursor: pointer;
+  margin-right: 10px;
+}
 /*  */
