--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@ button:focus-visible {
   }
 }
 
-/** restaurant randomizer*//
+/** restaurant randomizer*/
 
 .restaurant-container{
   width:400px;
